* Version 0.6.1 (unreleased)
 ** Breaking changes:
  *** `-g|--generate` flag added to command `slot chalresp`
   **** `slot chalresp` called with `-f|--force` without `KEY` argument or `-g|--generate` will now fail instead of interactively prompting for a secret key.
  *** `piv` commands called with `-f|--force` will now fail instead of interactively prompting for PIN or management key.
  *** `-g|--generate` flag added to command `piv change-management-key`.
   **** `-f|--force` variants without `-p|--protect` or `-g|--generate` will now fail instead of generating a random management key.
   **** Interactive prompt variants no longer generate a random management key on blank input.

* Version 0.6.0 (released 2018-02-09)
 ** OpenPGP: Expose remaining PIN retries in info command and API.
 ** CCID: Only try YubiKey smart card readers by default.
 ** Handle NEO issues with challenge-response credentials better.
 ** Improve logging.
 ** Improve error handling when opening device over OTP.
 ** Bugfix: Fix adding OTP data through the interactive prompt.

* Version 0.5.0 (released 2017-12-15)
 ** API breaking changes:
  *** OATH: New API more similar to yubioath-android
 ** CLI breaking changes:
  *** OATH: Touch prompt now written to stderr instead of stdout
  *** OATH: `-a|--algorithm` option to `list` command removed
  *** OATH: Columns in `code` command are now dymanically spaced depending on contents
  *** OATH: `delete` command now requires confirmation or `-f|--force` argument
  *** OATH: IDs printed by `list` command now include TOTP period if not 30
  *** Changed outputs:
   **** INFO: "Device name" output changed to "Device type"
   **** PIV: "Management key is stored on device" output changed to "Management key is stored on the YubiKey"
   **** PIV: "All PIV data have been cleared from the device" output changed to "All PIV data have been cleared from your YubiKey"